--- a/app/src/main/res/layout/dialog_robot_in_trouble.xml
+++ b/app/src/main/res/layout/dialog_robot_in_trouble.xml
@@ -100,7 +100,7 @@
             android:lineSpacingExtra="14sp"
             android:gravity="center"
             android:alpha="0.8"
-            android:text="@string/sorry_please_try_manual_handling"
+            android:text="请联系技术人员处理"
             android:textColor="@color/white"
             android:textSize="@dimen/small_text_size"
             app:layout_constraintEnd_toEndOf="@+id/view30"
@@ -122,6 +122,7 @@
             android:text="@string/manual_handling"
             android:textColor="@color/white"
             android:textSize="@dimen/small_text_size"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/content_tv"
             app:layout_constraintStart_toStartOf="@+id/content_tv"
             app:layout_constraintTop_toBottomOf="@+id/content_tv"
