--- a/app/src/main/res/layout/fragment_guiding.xml
+++ b/app/src/main/res/layout/fragment_guiding.xml
@@ -263,7 +263,7 @@
         android:id="@+id/RoomName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Abnormal_face"
+        android:text="机器人异常，人工服务点"
         android:textColor="@color/white"
         android:textSize="@dimen/dp_64"
         app:layout_constraintBottom_toBottomOf="@+id/imageView10"
