--- a/app/src/main/res/layout/fragment_mode_setting.xml
+++ b/app/src/main/res/layout/fragment_mode_setting.xml
@@ -189,7 +189,7 @@
                 <View
                     android:id="@+id/view11"
                     android:layout_width="@dimen/dp_1010"
-                    android:layout_height="904dp"
+                    android:layout_height="800dp"
                     android:layout_marginTop="24dp"
                     android:background="@drawable/setting_item_bg"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -292,6 +292,7 @@
                     android:layout_marginTop="@dimen/dp_92"
                     android:alpha="0.7"
                     android:text="@string/Duration"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_24"
                     app:layout_constraintStart_toStartOf="@+id/textView28"
@@ -305,6 +306,7 @@
                     android:text="@string/Duration_time_min"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_24"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/textView31"
                     app:layout_constraintStart_toStartOf="@+id/textView30"
                     app:layout_constraintTop_toTopOf="@+id/textView31" />
@@ -314,6 +316,7 @@
                     android:layout_width="560dp"
                     android:layout_height="@dimen/dp_48"
                     android:layout_marginStart="@dimen/dp_31"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/textView32"
                     app:layout_constraintStart_toEndOf="@+id/textView32"
                     app:layout_constraintTop_toTopOf="@+id/textView32" />
@@ -326,6 +329,7 @@
                     android:text="@string/Duration_time_max"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_24"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/stay"
                     app:layout_constraintStart_toEndOf="@+id/stay"
                     app:layout_constraintTop_toTopOf="@+id/stay" />
