--- a/app/src/main/res/layout/item_changing_point.xml
+++ b/app/src/main/res/layout/item_changing_point.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="@dimen/dp_204"
+    android:layout_height="@dimen/dp_72"
+    android:id="@+id/pointCatalogue">
 
     <TextView
         android:id="@+id/pointName"
-        android:layout_width="@dimen/dp_204"
-        android:layout_height="@dimen/dp_72"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/bg_button"
         android:gravity="center"
         android:text="@string/Abnormal_face"
