1、添加机器人讲解过程中的任务上报 2、修改讲解的图片储存方式以及修改控件为轮播控件 3、异常弹窗文字溢出的修改 4、每次对接充电桩的时候设置一下机器人位置

--- a/app/src/main/res/layout/fragment_start_explantion.xml
+++ b/app/src/main/res/layout/fragment_start_explantion.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.fragment.StartExplantionFragment">
+        tools:context=".view.fragment.StartExplainFragment">
 
 
 
@@ -204,7 +204,7 @@
                     app:layout_constraintStart_toStartOf="@+id/contentCL"
                     app:layout_constraintTop_toTopOf="parent" />
                 <!--显示图片-->
-                <ImageView
+                <com.sendi.deliveredrobot.view.widget.AdvanceView
                     android:id="@+id/pointImage"
                     android:layout_width="0dp"
                     android:layout_height="414dp"
@@ -251,7 +251,7 @@
                     <com.sendi.deliveredrobot.view.widget.SongLyricTextView
                         android:id="@+id/acceptstationTv"
                         android:layout_width="368dp"
-                        android:layout_height="@dimen/dp_325"
+                        android:layout_height="@dimen/dp_345"
                         android:layout_marginEnd="@dimen/dp_26"
                         android:layout_marginBottom="@dimen/dp_37"
                         android:alpha="0.6"
