--- a/app/src/main/res/layout/dialog_robot_self_check_hint.xml
+++ b/app/src/main/res/layout/dialog_robot_self_check_hint.xml
@@ -93,7 +93,7 @@
 
     <TextView
         android:id="@+id/content_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:alpha="0.8"
