1、修改过时依赖：dataBinding 2、修改副屏中视频声音控制的方法 3、在副屏中添加视频全屏和自适应宽高的显示、以及是否播放声音的控制 4、修改MQTT文件下载方法 5、添加限制：机器必须对接充电桩才能下发任务 6、修改讲解队列中切换任务点混乱问题 7、SeekBar可为负数的问题 8、添加测温和人脸识别限制：前提是有相对应的硬件设备

--- a/app/src/main/res/layout/fragment_contain.xml
+++ b/app/src/main/res/layout/fragment_contain.xml
@@ -26,6 +26,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/imageView1" />
 
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
