--- a/app/src/main/res/layout/dialog_robot_in_lose.xml
+++ b/app/src/main/res/layout/dialog_robot_in_lose.xml
@@ -7,272 +7,97 @@
 
     <View
         android:id="@+id/view19"
-        android:layout_width="1058dp"
-        android:layout_height="504dp"
+        android:layout_width="540dp"
+        android:layout_height="484dp"
         android:background="@drawable/shape_gradient_1a4fba_0e40a4_corners_10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline161"
-        app:layout_constraintTop_toTopOf="@+id/guideline159"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline159"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.185" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline174"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.055" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline162"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2375" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline169"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3688" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline177"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.425" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline171"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5075" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline179"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.585" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline173"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7138" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline165"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2975" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline167"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3113" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline161"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.0867" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline163"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1023" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline164"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3852" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline170"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3914" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline178"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4047" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline168"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3813" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline166"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.6875" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline175"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8594" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline172"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.625" />
 
     <ImageView
-        android:layout_width="334dp"
-        android:layout_height="428dp"
+        android:id="@+id/imageView17"
+        android:layout_width="120dp"
+        android:layout_height="188dp"
+        android:layout_marginBottom="@dimen/dp_356"
         android:background="@drawable/ic_robot_exception_2"
         android:contentDescription="@string/image_description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline163"
-        app:layout_constraintTop_toTopOf="@+id/guideline162"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/view19"
+        app:layout_constraintEnd_toEndOf="@+id/view19"
+        app:layout_constraintStart_toStartOf="@+id/view19" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="540dp"
+        android:layout_height="@dimen/dp_164"
+        android:src="@drawable/robot_exception_2_bg"
+        app:layout_constraintEnd_toEndOf="@+id/view19"
+        app:layout_constraintStart_toStartOf="@+id/view19"
+        app:layout_constraintTop_toTopOf="@+id/view19" />
 
     <TextView
+        android:id="@+id/textView84"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_148"
         android:includeFontPadding="false"
         android:text="@string/i_just_distracted"
-        android:textColor="@color/color_47D7FA"
-        android:textSize="@dimen/big_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline164"
-        app:layout_constraintTop_toTopOf="@+id/guideline165"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_36"
+        app:layout_constraintEnd_toEndOf="@+id/view19"
+        app:layout_constraintStart_toStartOf="@+id/view19"
+        app:layout_constraintTop_toTopOf="@+id/view19" />
 
-    <View
-        android:id="@+id/view18"
-        android:layout_width="640dp"
-        android:layout_height="2dp"
-        android:background="@color/color_4D6FBE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline168"
-        app:layout_constraintTop_toTopOf="@+id/guideline169"
-        app:layout_constraintVertical_bias="0.0" />
+    <ImageView
+        android:id="@+id/imageViewClose"
+        android:layout_width="@dimen/dp_64"
+        android:layout_height="@dimen/dp_64"
+        android:background="@drawable/ic_close_circle"
+        android:contentDescription="@string/image_description"
+        app:layout_constraintEnd_toEndOf="@+id/view19"
+        app:layout_constraintTop_toTopOf="@+id/view19" />
 
     <TextView
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_16"
+        android:alpha="0.4"
         android:includeFontPadding="false"
-        android:textColor="@color/color_4D6FBE"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline166"
-        app:layout_constraintTop_toTopOf="@+id/guideline167"
-        app:layout_constraintVertical_bias="0.0"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_24"
+        app:layout_constraintEnd_toEndOf="@+id/textView84"
+        app:layout_constraintStart_toStartOf="@+id/textView84"
+        app:layout_constraintTop_toBottomOf="@+id/textView84"
         tools:text="2021-03-23 18:14" />
 
-    <ImageView
-        android:id="@+id/imageViewClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_close_circle"
-        android:contentDescription="@string/image_description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline175"
-        app:layout_constraintTop_toTopOf="@+id/guideline174"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/tipTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:includeFontPadding="false"
-        android:lineSpacingExtra="14sp"
-        android:text="@string/you_can_do_this_remind_1"
-        android:textColor="@color/white"
-        android:textSize="@dimen/mid_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline170"
-        app:layout_constraintTop_toTopOf="@+id/guideline171"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:includeFontPadding="false"
-        android:lineSpacingExtra="14sp"
-        android:text="@string/you_can_do_this_remind_2"
-        android:textColor="@color/white"
-        android:textSize="@dimen/mid_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline170"
-        app:layout_constraintTop_toTopOf="@+id/guideline179"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:lineSpacingExtra="14sp"
         android:text="@string/you_can_do_this"
-        android:textColor="@color/color_A0BAEF"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline178"
-        app:layout_constraintTop_toTopOf="@+id/guideline177"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_28"
+        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintEnd_toEndOf="@+id/view19"
+        app:layout_constraintStart_toStartOf="@+id/view19"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:includeFontPadding="false"
-        android:textColor="@color/color_4D6FBE"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline172"
-        app:layout_constraintTop_toTopOf="@+id/guideline173"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:textColor="@color/color_00EEFF"
+        android:textSize="@dimen/sp_24"
+        app:layout_constraintBottom_toBottomOf="@+id/view19"
+        app:layout_constraintEnd_toEndOf="@+id/view19"
+        app:layout_constraintStart_toStartOf="@+id/view19"
         tools:text="错误编码：0347886124" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
