--- a/app/src/main/res/layout/fragment_go_back.xml
+++ b/app/src/main/res/layout/fragment_go_back.xml
@@ -31,6 +31,7 @@
             android:src="@drawable/img_goback" />
 
         <TextView
+            android:id="@+id/goBackTv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/white"
