--- a/app/src/main/res/layout/presentation_content.xml
+++ b/app/src/main/res/layout/presentation_content.xml
@@ -24,8 +24,8 @@
 
             <com.sendi.deliveredrobot.view.widget.AdvanceView
                 android:id="@+id/Spread_out"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@color/white"
                 android:visibility="gone"
